[package]
name = "skill-tree"
version = "1.3.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "generate graphviz files to show roadmaps"
license = "MIT"
repository = "https://github.com/nikomatsakis/skill-tree"
homepage = "https://github.com/nikomatsakis/skill-tree"

[dependencies]
anyhow = "1.0"
clap = "2.33.0"
fehler = "1.0.0-alpha.2"
rust-embed = "5.2.0"
structopt = "0.3.9"
serde = "1.0"
serde_derive = "1.0"
svg = "0.5.12"
toml = "0.5.1"
