[package]
name = "skill-tree"
version = "3.2.1"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "generate graphviz files to show roadmaps"
license = "MIT"
repository = "https://github.com/nikomatsakis/skill-tree"
homepage = "https://github.com/nikomatsakis/skill-tree"

[workspace]
members = ["mdbook-skill-tree"]

[dependencies]
anyhow = "1.0"
clap = "2.33.0"
fehler = "1.0.0-alpha.2"
structopt = "0.3.11"
serde = "1.0"
serde_derive = "1.0"
svg = "0.5.12"
toml = "0.5.1"
htmlescape = "0.3.1"

[dev-dependencies]
regex = "1.0"
prettydiff = "0.4"

[profile.release.build-override]
opt-level = 0
