[package]
name = "mdbook-skill-tree"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
skill-tree = { version="1.3.2", path=".." }
mdbook = "0.3"
pulldown-cmark = "0.7.0"
pulldown-cmark-to-cmark = "4.0.0"
env_logger = "0.7.1"
log = "0.4"
clap = "2.33"
serde_json = "1.0"
rust-embed = "5.2.0"
toml_edit = "0.1.5"

[dev-dependencies]
regex = "1.0"