[package]
name = "mdbook-skill-tree"
version = "2.0.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "mdbook plugin to show roadmaps"
license = "MIT"
repository = "https://github.com/nikomatsakis/skill-tree"
homepage = "https://github.com/nikomatsakis/skill-tree"

[dependencies]
anyhow = "1.0"
skill-tree = { version="2.0.0", path=".." }
mdbook = "0.3"
pulldown-cmark = "0.7.0"
pulldown-cmark-to-cmark = "4.0.0"
env_logger = "0.7.1"
log = "0.4"
clap = "2.33"
serde_json = "1.0"
toml_edit = "0.1.5"
fehler = "1.0.0-alpha.2"

[dev-dependencies]
regex = "1.0"